--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <script src="https://unpkg.com/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
     <!-- Seu JS -->
-    <script src="main.js"></script>
+    <script src="phone.js"></script>
+    <script src="mcr.js"></script>
 </body>
 
 </html>
